--- a/otros/portada.tex
+++ b/otros/portada.tex
@@ -1,6 +1,6 @@
 \begin{titlepage}
 \centering
-	\includegraphics[height=4cm]{imagenes/logo_informatica_s.png}\\
+	\includegraphics[height=4cm]{ images/logo_informatica_s.png}\\
 	\vspace{0.25cm}
  	{\Large \textsc{{Universidad Nacional\\ de Educación a Distancia}}}\\
  	\vspace{0.8cm}
@@ -8,22 +8,23 @@
 	\vspace{0.25cm}
 	\vspace{1.5cm}
     \begin{spacing}{2}
- 	{\textsc{\Huge [Título del trabajo]}}
+  	{\textsc{\Huge Injury detection in runners using anthropometric and 3D marker-based kinematic data.}}
     \end{spacing}
 	\vfill
-	{\Large [Autor/a]}\\
+	{\Large Adrián José Zapater Reig}\\
 	\vspace{0.3cm}
 	\begin{tabular}{ll}
-	% Sustituir [Director] por el nombre del director
-	\large Director/a: & \large [Director/a]\\
+
+	\large Supervisor: & \large Olga C. Santos Martín\\
 	\vspace{0.3cm}
-	\large Co-director/a: & \large [Co-director/a]
+	\large Co-supervisor: & \large Miguel Ángel Portaz Collado
+	\large Co-supervisor: & \large Dr. Javier Gámez Payá 
 	\end{tabular}
 	
 	\vfill
-	{\Large Trabajo de Fin de Máster}\\
+	{\Large Master's Thesis}\\
 	\vspace{0.3cm}
-	{\large Máster Universitario\\ en [Nombre de la titulación]}\\
+	{\large Máster Universitario\\ en Ingeniería y Ciencia del Dato}\\
 	\vspace{0.25cm}
-	[Fecha de presentación/Convocatoria]
+	Septiembre 2025
 \end{titlepage}
