--- a/otros/sumary.tex
+++ b/otros/sumary.tex
@@ -1,10 +1,10 @@
 \noindent \begin{center}
-\section*{Resumen}
+\section*{Summary}
 \par\end{center}
 
 \lipsum[1-2]
 
 \vspace{0.5cm}
 \begin{flushleft}
-\textbf{Palabras clave}: palabra1, palabra2, palabra3
+\textbf{Keywords}: palabra1, palabra2, palabra3
 \end{flushleft}
