Fixes on overleaf

--- a/otros/portada.tex
+++ b/otros/portada.tex
@@ -16,9 +16,9 @@
 	\begin{tabular}{ll}
 
 	\large Supervisor: & \large Olga C. Santos Martín\\
-	\vspace{0.3cm}
-	\large Co-supervisor: & \large Miguel Ángel Portaz Collado
-	\large Co-supervisor: & \large Dr. Javier Gámez Payá 
+	% \vspace{0.3cm}\\
+	\large Co-supervisor: & \large Miguel Ángel Portaz Collado\\
+        \large Co-supervisor: & \large Dr. Javier Gámez Payá 
 	\end{tabular}
 	
 	\vfill
