--- a/Master_Document.tex
+++ b/Master_Document.tex
@@ -105,12 +105,12 @@
 \mainmatter
 \pagestyle{fancy}
 
-\include{capitulos/1.introduction}
-\include{capitulos/2.state_of_the_art}
-\include{capitulos/3.methodology}
-\include{capitulos/4.results}
-\include{capitulos/5.conclusions}
-\include{capitulos/6.limitations}
+\include{chapters/1.introduction}
+\include{chapters/2.state_of_the_art}
+\include{chapters/3.methodology}
+\include{chapters/4.results}
+\include{chapters/5.conclusions}
+\include{chapters/6.limitations}
 
 
 \newpage
