--- a/apendice_ejemplo.tex
+++ b/apendice_ejemplo.tex
@@ -4,9 +4,9 @@ Este primer apéndice presenta ejemplos en \LaTeX de cómo incluir referencias, 
 
 \section{Referencias, citas y bibliografía}
 \subsection{Referencias}
-Para poder referenciar un elemento dentro de la memoria hay que marcarlo con una etiqueta (\verb|\label{[id]}|) que lo identifique inequívocamente. Es habitual utilizar identificadores  representativos, por ejemplo, para marcar la introducción podemos utilizar una etiqueta como \verb|\label{chap:introduccion}|
+Para poder referenciar un elemento dentro de la memoria hay que marcarlo con una etiqueta (\verb|\label{[id]}|) que lo identifique inequívocamente. Es habitual utilizar identificadores  representativos, por ejemplo, para marcar la introducción podemos utilizar una etiqueta como \verb|\label{chap:introduction}|
 
-Una vez marcado el elemento (capítulo, sección, figura, tabla, \ldots) en \LaTeX, utilizaremos el comando \verb|ref| indicando a qué etiqueta queremos referenciar (\verb|\ref{[id]}|). Por ejemplo, de esta manera podemos referenciar al capítulo de la introducción con \ref{chap:introduccion}. Podemos acompañarlo de un texto como ``\ldots como se vió en el capítulo~\ref{chap:introduccion}\ldots'' o bien utilizar el comando \verb|\autoref{[i]}|, que incluiría el tipo del elemento y aparecería en el texto como \autoref{chap:introduccion}, o incluso referenciarlo por el nombre del elemento con \verb|\nameref{[id]}|, lo que se mostraría como \nameref{chap:introduccion}. 
+Una vez marcado el elemento (capítulo, sección, figura, tabla, \ldots) en \LaTeX, utilizaremos el comando \verb|ref| indicando a qué etiqueta queremos referenciar (\verb|\ref{[id]}|). Por ejemplo, de esta manera podemos referenciar al capítulo de la introducción con \ref{chap:introduction}. Podemos acompañarlo de un texto como ``\ldots como se vió en el capítulo~\ref{chap:introduction}\ldots'' o bien utilizar el comando \verb|\autoref{[i]}|, que incluiría el tipo del elemento y aparecería en el texto como \autoref{chap:introduction}, o incluso referenciarlo por el nombre del elemento con \verb|\nameref{[id]}|, lo que se mostraría como \nameref{chap:introduction}. 
 
 \subsection{Bibliografía}
 Para añadir una cita bibliográfica al documento tendremos que asegurarnos que en el fichero de bibliografía (bibliografía.bib) se encuentre la entrada bibliográfica correspondiente. Una vez que tengamos nuestra entrada bibliográfica utilizaremos el comando de cita de \LaTeX indicando el identificador de la referencia bibliográfica, por ejemplo: 
@@ -28,7 +28,7 @@ Para añadir una figura al documento utilizaremos el entorno figure, indicando l
 
 \begin{figure}[ht]
 \begin{centering}
-\includegraphics[width=0.5\columnwidth]{imagenes/logo_informatica.png}
+\includegraphics[width=0.5\columnwidth]{images/logo_informatica.png}
 \par\end{centering}
 
 \caption[Ejemplo de figura]{Esta figura tiene una descripción al pie muy larga, por lo que añadiremos un título breve utilizando para ello los corchetes tras el comando \textbackslash caption. La etiqueta de la figura (label) se incluirá al incio del flotante de la figura para que cualquier referencia cruzada (ref) a la misma lleve al inicio del flotante.\label{fig:Ejemplo-de-figura}}
