Add schema for Work Plan in introduction

--- a/apendix_1.tex
+++ b/apendix_1.tex
@@ -6,6 +6,15 @@
         -- MetaHyperModel
         -- ModelLoader
         -- Predictor (Unilateral and Bilateral)
+
+
+
+\chapter{Apendix II}
+- Data size - 50GB of data.
+- Concurrency vs Parallelism -> How to reduce extraction from days to hours
+- GPU for Deep Learning
+- Limitation on Curve Registration due to size and CPU 
+
     
 
 
