Add storyline draft, first glossary words and WIP on the introductiom chapter

--- a/bibliografia.bib
+++ b/bibliografia.bib
@@ -12,3 +12,16 @@
   month = nov 
 }
 
+@article{Chawla2002,
+  title = {SMOTE: Synthetic Minority Over-sampling Technique},
+  volume = {16},
+  ISSN = {1076-9757},
+  url = {http://dx.doi.org/10.1613/jair.953},
+  DOI = {10.1613/jair.953},
+  journal = {Journal of Artificial Intelligence Research},
+  publisher = {AI Access Foundation},
+  author = {Chawla,  N. V. and Bowyer,  K. W. and Hall,  L. O. and Kegelmeyer,  W. P.},
+  year = {2002},
+  month = jun,
+  pages = {321–357}
+}
