--- a/bibliografia.bib
+++ b/bibliografia.bib
@@ -25,3 +25,15 @@
   month = jun,
   pages = {321–357}
 }
+
+@inproceedings{FuentesJimnez2025,
+  title = {Advanced Machine Learning Techniques for Explainable Detection of Knee Injuries in Runners},
+  url = {http://dx.doi.org/10.1109/MeMeA65319.2025.11068035},
+  DOI = {10.1109/memea65319.2025.11068035},
+  booktitle = {2025 IEEE Medical Measurements &amp;amp; Applications (MeMeA)},
+  publisher = {IEEE},
+  author = {Fuentes-Jiménez,  David and García-de-Villa,  Sara and Casillas-Pérez,  David and Floría,  Pablo and Melgarejo-Meseguer,  Francisco-Manuel},
+  year = {2025},
+  month = may,
+  pages = {1–6}
+}
