--- a/bibliografia.bib
+++ b/bibliografia.bib
@@ -37,3 +37,18 @@
   month = may,
   pages = {1–6}
 }
+
+@article{Pohl2010,
+  title = {Can the reliability of three-dimensional running kinematics be improved using functional joint methodology?},
+  volume = {32},
+  ISSN = {0966-6362},
+  url = {http://dx.doi.org/10.1016/j.gaitpost.2010.07.020},
+  DOI = {10.1016/j.gaitpost.2010.07.020},
+  number = {4},
+  journal = {Gait &amp; Posture},
+  publisher = {Elsevier BV},
+  author = {Pohl,  Michael B. and Lloyd,  Chandra and Ferber,  Reed},
+  year = {2010},
+  month = oct,
+  pages = {559–563}
+}
