--- a/otros/glossary.tex
+++ b/otros/glossary.tex
@@ -15,3 +15,9 @@
     name={Cycle},
     description={A gait cycle defined as the interval between two successive foot touchdowns of the same foot, including both stance and swing phases.}
 }
+
+
+\newglossaryentry{mocapsys}{
+    name={MoCap system},
+    description={Motion Capture System. A system that uses multiple cameras and reflective markers to record the three-dimensional positions of anatomical landmarks on a subject during movement, enabling precise measurement and analysis of body kinematics.}
+}
