WIP Methodology, datset description

--- a/bibliografia.bib
+++ b/bibliografia.bib
@@ -52,3 +52,105 @@
   month = oct,
   pages = {559–563}
 }
+
+
+@article{Napier2019,
+  title = {Kinematic Correlates of Kinetic Outcomes Associated With Running-Related Injury},
+  volume = {35},
+  ISSN = {1543-2688},
+  url = {http://dx.doi.org/10.1123/jab.2018-0203},
+  DOI = {10.1123/jab.2018-0203},
+  number = {2},
+  journal = {Journal of Applied Biomechanics},
+  publisher = {Human Kinetics},
+  author = {Napier,  Christopher and MacLean,  Christopher L. and Maurer,  Jessica and Taunton,  Jack E. and Hunt,  Michael A.},
+  year = {2019},
+  month = apr,
+  pages = {123–130}
+}
+
+@article{Vannatta2023,
+  title = {Kinematic and muscle force asymmetry in healthy runners: How do different methods measure up?},
+  volume = {103},
+  ISSN = {0966-6362},
+  url = {http://dx.doi.org/10.1016/j.gaitpost.2023.05.010},
+  DOI = {10.1016/j.gaitpost.2023.05.010},
+  journal = {Gait &amp; Posture},
+  publisher = {Elsevier BV},
+  author = {Vannatta,  C. Nathan and Blackman,  Taylor and Kernozek,  Thomas W.},
+  year = {2023},
+  month = jun,
+  pages = {159–165}
+}
+
+@article{Malisoux2024,
+  title = {Gait asymmetry in spatiotemporal and kinetic variables does not increase running-related injury risk in lower limbs: a secondary analysis of a randomised trial including 800+ recreational runners},
+  volume = {10},
+  ISSN = {2055-7647},
+  url = {http://dx.doi.org/10.1136/bmjsem-2023-001787},
+  DOI = {10.1136/bmjsem-2023-001787},
+  number = {1},
+  journal = {BMJ Open Sport &amp; Exercise Medicine},
+  publisher = {BMJ},
+  author = {Malisoux,  Laurent and Gette,  Paul and Delattre,  Nicolas and Urhausen,  Axel and Theisen,  Daniel},
+  year = {2024},
+  month = jan,
+  pages = {e001787}
+}
+
+@article{Dibbern2025,
+  title = {Scoping Review of Machine Learning Techniques in Marker-Based Clinical Gait Analysis},
+  volume = {12},
+  ISSN = {2306-5354},
+  url = {http://dx.doi.org/10.3390/bioengineering12060591},
+  DOI = {10.3390/bioengineering12060591},
+  number = {6},
+  journal = {Bioengineering},
+  publisher = {MDPI AG},
+  author = {Dibbern,  Kevin N. and Krzak,  Maddalena G. and Olivas,  Alejandro and Albert,  Mark V. and Krzak,  Joseph J. and Kruger,  Karen M.},
+  year = {2025},
+  month = may,
+  pages = {591}
+}
+
+@article{Harris2022,
+  title = {A Survey of Human Gait-Based Artificial Intelligence Applications},
+  volume = {8},
+  ISSN = {2296-9144},
+  url = {http://dx.doi.org/10.3389/frobt.2021.749274},
+  DOI = {10.3389/frobt.2021.749274},
+  journal = {Frontiers in Robotics and AI},
+  publisher = {Frontiers Media SA},
+  author = {Harris,  Elsa J. and Khoo,  I-Hung and Demircan,  Emel},
+  year = {2022},
+  month = jan 
+}
+
+% Ankle biomechanics in detail
+@article{Brockett2016,
+  title = {Biomechanics of the ankle},
+  volume = {30},
+  ISSN = {1877-1327},
+  url = {http://dx.doi.org/10.1016/j.mporth.2016.04.015},
+  DOI = {10.1016/j.mporth.2016.04.015},
+  number = {3},
+  journal = {Orthopaedics and Trauma},
+  publisher = {Elsevier BV},
+  author = {Brockett,  Claire L. and Chapman,  Graham J.},
+  year = {2016},
+  month = jun,
+  pages = {232–238}
+}
+
+
+% General biomechanics book
+@book{Bartlett2014,
+  title = {Introduction to Sports Biomechanics},
+  ISBN = {9781134520190},
+  url = {http://dx.doi.org/10.4324/9781315889504},
+  DOI = {10.4324/9781315889504},
+  publisher = {Routledge},
+  author = {Bartlett,  Roger},
+  year = {2014},
+  month = jan 
+}
