Add reference to repo and WIP on Code Descri[ption

--- a/bibliografia.bib
+++ b/bibliografia.bib
@@ -154,3 +154,10 @@
   year = {2014},
   month = jan 
 }
+
+@software{Zapater_Reig_Running_Injury_Clinic,
+author = {Zapater Reig, Adrian Jose},
+license = {MIT},
+title = {{Running Injury Clinic Kinematic Dataset (RICKD) Analysis}},
+url = {https://github.com/adzarei/rickd-analysis}
+}
