--- a/bibliografia.bib
+++ b/bibliografia.bib
@@ -155,9 +155,11 @@
   month = jan 
 }
 
-@software{Zapater_Reig_Running_Injury_Clinic,
+@software{Zapater_Reig_Running_Injury_Clinic_2025,
 author = {Zapater Reig, Adrian Jose},
 license = {MIT},
+month = sep,
 title = {{Running Injury Clinic Kinematic Dataset (RICKD) Analysis}},
-url = {https://github.com/adzarei/rickd-analysis}
+url = {https://github.com/adzarei/rickd-analysis},
+year = {2025}
 }
