Scape & in bibliography

--- a/bibliografia.bib
+++ b/bibliografia.bib
@@ -30,7 +30,7 @@
   title = {Advanced Machine Learning Techniques for Explainable Detection of Knee Injuries in Runners},
   url = {http://dx.doi.org/10.1109/MeMeA65319.2025.11068035},
   DOI = {10.1109/memea65319.2025.11068035},
-  booktitle = {2025 IEEE Medical Measurements &amp;amp; Applications (MeMeA)},
+  booktitle = {2025 IEEE Medical Measurements \&amp;amp; Applications (MeMeA)},
   publisher = {IEEE},
   author = {Fuentes-Jiménez,  David and García-de-Villa,  Sara and Casillas-Pérez,  David and Floría,  Pablo and Melgarejo-Meseguer,  Francisco-Manuel},
   year = {2025},
@@ -45,7 +45,7 @@
   url = {http://dx.doi.org/10.1016/j.gaitpost.2010.07.020},
   DOI = {10.1016/j.gaitpost.2010.07.020},
   number = {4},
-  journal = {Gait &amp; Posture},
+  journal = {Gait \&amp; Posture},
   publisher = {Elsevier BV},
   author = {Pohl,  Michael B. and Lloyd,  Chandra and Ferber,  Reed},
   year = {2010},
@@ -75,7 +75,7 @@
   ISSN = {0966-6362},
   url = {http://dx.doi.org/10.1016/j.gaitpost.2023.05.010},
   DOI = {10.1016/j.gaitpost.2023.05.010},
-  journal = {Gait &amp; Posture},
+  journal = {Gait \&amp; Posture},
   publisher = {Elsevier BV},
   author = {Vannatta,  C. Nathan and Blackman,  Taylor and Kernozek,  Thomas W.},
   year = {2023},
@@ -90,7 +90,7 @@
   url = {http://dx.doi.org/10.1136/bmjsem-2023-001787},
   DOI = {10.1136/bmjsem-2023-001787},
   number = {1},
-  journal = {BMJ Open Sport &amp; Exercise Medicine},
+  journal = {BMJ Open Sport \&amp; Exercise Medicine},
   publisher = {BMJ},
   author = {Malisoux,  Laurent and Gette,  Paul and Delattre,  Nicolas and Urhausen,  Axel and Theisen,  Daniel},
   year = {2024},
