WIP code description

--- a/otros/glossary.tex
+++ b/otros/glossary.tex
@@ -2,17 +2,17 @@
 
 % Introduzca de cada término del glosario su nombre y su descripción
 \newglossaryentry{subject}{
-    name={Subject},
+    name={subject},
     description={An individual runner included in the dataset. Each subject may contribute one or more running sessions.}
 }
 
 \newglossaryentry{session}{
-    name={Session},
+    name={session},
     description={A continuous treadmill run (approximately 60 seconds) recorded from a single subject. Each session yields multiple gait cycles.}
 }
 
 \newglossaryentry{cycle}{
-    name={Cycle},
+    name={cycle},
     description={A gait cycle defined as the interval between two successive foot touchdowns of the same foot, including both stance and swing phases.}
 }
 
