Restructure Code Desctiption

--- a/otros/glossary.tex
+++ b/otros/glossary.tex
@@ -21,3 +21,8 @@
     name={MoCap system},
     description={Motion Capture System. A system that uses multiple cameras and reflective markers to record the three-dimensional positions of anatomical landmarks on a subject during movement, enabling precise measurement and analysis of body kinematics.}
 }
+
+\newglossaryentry{matlab}{
+    name={matlab},
+    description={A high-level programming language and programming computing platform for engineering and scientific applications, including data analysis and signal processing.}
+}
