--- a/otros/glossary.tex
+++ b/otros/glossary.tex
@@ -26,3 +26,8 @@
     name={matlab},
     description={A high-level programming language and programming computing platform for engineering and scientific applications, including data analysis and signal processing.}
 }
+
+\newglossaryentry{jupyter}{
+    name={jupyter},
+    description={A web-based interactive development environment for notebooks, code, and data. It is typically used in data science, scientific computing, computational journalism, and machine learning.}
+}
