Fix bibtext references from apendice_ejemplo.tex

--- a/apendice_ejemplo.tex
+++ b/apendice_ejemplo.tex
@@ -10,17 +10,17 @@ Una vez marcado el elemento (capítulo, sección, figura, tabla, \ldots) en \LaT
 
 \subsection{Bibliografía}
 Para añadir una cita bibliográfica al documento tendremos que asegurarnos que en el fichero de bibliografía (bibliografía.bib) se encuentre la entrada bibliográfica correspondiente. Una vez que tengamos nuestra entrada bibliográfica utilizaremos el comando de cita de \LaTeX indicando el identificador de la referencia bibliográfica, por ejemplo: 
-\verb|\cite{aikg}|, que se se visualizaría como \cite{aikg}. 
+\verb|\cite{aikg}|, que se se visualizaría como \cite{Bartlett2014}}. 
 
 Cuando queramos citar más de un trabajo en un mismo punto del documento se deberán añadir a la cita separados por comas, por ejemplo: \verb|\cite{chen_2018, Qin_2020}|, que se visualizaría como \cite{chen_2018, Qin_2020}. En estos casos es habitual añadir las citas en orden cronológico de más antigua a más reciente.
 
 Tal y como está configurada esta plantilla, por defecto el comando \verb|\cite| realizará una cita textual (\verb|\citet|), es decir, la cita forma parte del texto. Este tipo de citas se suelen realizar en frases como: 
 
-``Algunos ejemplos de grafos de conocimiento se presentan en \citet{ji2020survey}'' 
+``Algunos ejemplos de grafos de conocimiento se presentan en \citet{Bartlett2014}'' 
 
 Cuando la cita no forma parte del texto si no que se utiliza para reforzar una afirmación realizada en una frase, se debe utilizar una cita entre paréntesis (o corchetes). Para ello se usa el comando \verb|\citep|, por ejemplo:
 
-``Existe una gran variedad de aplicaciones de los grafos de conocimiento \citep{ji2020survey}.''
+``Existe una gran variedad de aplicaciones de los grafos de conocimiento \citep{Bartlett2014}.''
 
 
 \section{Figuras}
