Fix all warning due to wrong bibitext reference

--- a/apendice_ejemplo.tex
+++ b/apendice_ejemplo.tex
@@ -10,9 +10,9 @@ Una vez marcado el elemento (capítulo, sección, figura, tabla, \ldots) en \LaT
 
 \subsection{Bibliografía}
 Para añadir una cita bibliográfica al documento tendremos que asegurarnos que en el fichero de bibliografía (bibliografía.bib) se encuentre la entrada bibliográfica correspondiente. Una vez que tengamos nuestra entrada bibliográfica utilizaremos el comando de cita de \LaTeX indicando el identificador de la referencia bibliográfica, por ejemplo: 
-\verb|\cite{aikg}|, que se se visualizaría como \cite{Bartlett2014}}. 
+\verb|\cite{aikg}|, que se se visualizaría como \cite{Bartlett2014}. 
 
-Cuando queramos citar más de un trabajo en un mismo punto del documento se deberán añadir a la cita separados por comas, por ejemplo: \verb|\cite{chen_2018, Qin_2020}|, que se visualizaría como \cite{chen_2018, Qin_2020}. En estos casos es habitual añadir las citas en orden cronológico de más antigua a más reciente.
+Cuando queramos citar más de un trabajo en un mismo punto del documento se deberán añadir a la cita separados por comas, por ejemplo: \verb|\cite{chen_2018, Qin_2020}|, que se visualizaría como \cite{Bartlett2014, Dibbern2025}. En estos casos es habitual añadir las citas en orden cronológico de más antigua a más reciente.
 
 Tal y como está configurada esta plantilla, por defecto el comando \verb|\cite| realizará una cita textual (\verb|\citet|), es decir, la cita forma parte del texto. Este tipo de citas se suelen realizar en frases como: 
 
