--- a/bibliografia.bib
+++ b/bibliografia.bib
@@ -163,3 +163,30 @@ title = {{Running Injury Clinic Kinematic Dataset (RICKD) Analysis}},
 url = {https://github.com/adzarei/rickd-analysis},
 year = {2025}
 }
+
+@misc{Bringmann2023,
+  doi = {10.48550/ARXIV.2310.18128},
+  url = {https://arxiv.org/abs/2310.18128},
+  author = {Bringmann,  Karl and Fischer,  Nick and van der Hoog,  Ivor and Kipouridis,  Evangelos and Kociumaka,  Tomasz and Rotenberg,  Eva},
+  keywords = {Computational Geometry (cs.CG),  FOS: Computer and information sciences,  FOS: Computer and information sciences},
+  title = {Dynamic Dynamic Time Warping},
+  publisher = {arXiv},
+  year = {2023},
+  copyright = {Creative Commons Attribution 4.0 International}
+}
+
+@article{Crane2010,
+  title = {Effect of registration on cyclical kinematic data},
+  volume = {43},
+  ISSN = {0021-9290},
+  url = {http://dx.doi.org/10.1016/j.jbiomech.2010.04.024},
+  DOI = {10.1016/j.jbiomech.2010.04.024},
+  number = {12},
+  journal = {Journal of Biomechanics},
+  publisher = {Elsevier BV},
+  author = {Crane,  Elizabeth A. and Cassidy,  Ruth B. and Rothman,  Edward D. and Gerstner,  Geoffrey E.},
+  year = {2010},
+  month = aug,
+  pages = {2444–2447}
+}
+
