--- a/otros/glossary.tex
+++ b/otros/glossary.tex
@@ -31,3 +31,8 @@
     name={jupyter},
     description={A web-based interactive development environment for notebooks, code, and data. It is typically used in data science, scientific computing, computational journalism, and machine learning.}
 }
+
+\newglossaryentry{channel}{
+    name={channel},
+    description={In time-series data, a channel refers to a single variable or measurement recorded over time. For example, each marker coordinate (e.g., left knee x-position) constitutes a separate channel. Multichannel time-series data contain multiple such variables recorded simultaneously.}
+}
