--- a/bibliografia.bib
+++ b/bibliografia.bib
@@ -202,3 +202,32 @@ year = {2025}
   url     = {http://jmlr.org/papers/v9/vandermaaten08a.html}
 }
 
+@article{Phinyomark2017,
+  title = {Analysis of Big Data in Gait Biomechanics: Current Trends and Future Directions},
+  volume = {38},
+  ISSN = {2199-4757},
+  url = {http://dx.doi.org/10.1007/s40846-017-0297-2},
+  DOI = {10.1007/s40846-017-0297-2},
+  number = {2},
+  journal = {Journal of Medical and Biological Engineering},
+  publisher = {Springer Science and Business Media LLC},
+  author = {Phinyomark,  Angkoon and Petri,  Giovanni and Ibáñez-Marcelo,  Esther and Osis,  Sean T. and Ferber,  Reed},
+  year = {2017},
+  month = jul,
+  pages = {244–260}
+}
+
+@article{DING2005,
+  title = {MINIMUM REDUNDANCY FEATURE SELECTION FROM MICROARRAY GENE EXPRESSION DATA},
+  volume = {03},
+  ISSN = {1757-6334},
+  url = {http://dx.doi.org/10.1142/S0219720005001004},
+  DOI = {10.1142/s0219720005001004},
+  number = {02},
+  journal = {Journal of Bioinformatics and Computational Biology},
+  publisher = {World Scientific Pub Co Pte Lt},
+  author = {DING,  CHRIS and PENG,  HANCHUAN},
+  year = {2005},
+  month = apr,
+  pages = {185–205}
+}
