--- a/Master_Document.tex
+++ b/Master_Document.tex
@@ -3,6 +3,10 @@
 \usepackage[T1]{fontenc}
 \usepackage[main=english,spanish,es-tabla]{babel}
 
+% For algorithms.
+\usepackage{algorithm}
+\usepackage{algpseudocode}
+
 % \usepackage{hyphenat}
 % \hyphenation{apren-di-zaje pro-fun-do}
 
