--- a/bibliografia.bib
+++ b/bibliografia.bib
@@ -231,3 +231,56 @@ year = {2025}
   month = apr,
   pages = {185–205}
 }
+
+@article{Chau2005,
+  title = {Managing variability in the summary and comparison of gait data},
+  volume = {2},
+  ISSN = {1743-0003},
+  url = {http://dx.doi.org/10.1186/1743-0003-2-22},
+  DOI = {10.1186/1743-0003-2-22},
+  number = {1},
+  journal = {Journal of NeuroEngineering and Rehabilitation},
+  publisher = {Springer Science and Business Media LLC},
+  author = {Chau,  Tom and Young,  Scott and Redekop,  Sue},
+  year = {2005},
+  month = jul 
+}
+
+@article{Ramsay1998,
+ ISSN = {13697412, 14679868},
+ URL = {http://www.jstor.org/stable/2985944},
+ abstract = {Functional data analysis involves the extension of familiar statistical procedures such as principal components analysis, linear modelling and canonical correlation analysis to data where the raw observation xj is a function. An essential preliminary to a functional data analysis is often the registration or alignment of salient curve features by suitable monotone transformations hj of the argument t, so that the actual analyses are carried out on the values xj{hj(t)}. This is referred to as dynamic time warping in the engineering literature. In effect, this conceptualizes variation among functions as being composed of two aspects: horizontal and vertical, or domain and range. A nonparametric function estimation technique is described for identifying the smooth monotone transformations hj and is illustrated by data analyses. A second-order linear stochastic differential equation is proposed to model these components of variation.},
+ author = {J. O. Ramsay and Xiaochun Li},
+ journal = {Journal of the Royal Statistical Society. Series B (Statistical Methodology)},
+ number = {2},
+ pages = {351--363},
+ publisher = {[Royal Statistical Society, Oxford University Press]},
+ title = {Curve Registration},
+ urldate = {2025-08-26},
+ volume = {60},
+ year = {1998}
+}
+
+
+@notes{Ramsay2003,
+ URL = {https://www.psych.mcgill.ca/misc/fda/downloads/FDAfuns/R/inst/Matlab/fdaM/FDAfuns.pdf},
+ abstract = {Functional data analysis involves the extension of familiar statistical procedures such as principal components analysis, linear modelling and canonical correlation analysis to data where the raw observation xj is a function. An essential preliminary to a functional data analysis is often the registration or alignment of salient curve features by suitable monotone transformations hj of the argument t, so that the actual analyses are carried out on the values xj{hj(t)}. This is referred to as dynamic time warping in the engineering literature. In effect, this conceptualizes variation among functions as being composed of two aspects: horizontal and vertical, or domain and range. A nonparametric function estimation technique is described for identifying the smooth monotone transformations hj and is illustrated by data analyses. A second-order linear stochastic differential equation is proposed to model these components of variation.},
+ author = {J. O. Ramsay},
+ pages = {1--107},
+ title = {Matlab, R and S-PLUS Functions for Functional Data Analysis},
+ urldate = {2003-04-01},
+ year = {2003}
+}
+
+@article{Giorgino2009,
+  title = {Computing and Visualizing Dynamic Time Warping Alignments inR: ThedtwPackage},
+  volume = {31},
+  ISSN = {1548-7660},
+  url = {http://dx.doi.org/10.18637/jss.v031.i07},
+  DOI = {10.18637/jss.v031.i07},
+  number = {7},
+  journal = {Journal of Statistical Software},
+  publisher = {Foundation for Open Access Statistic},
+  author = {Giorgino,  Toni},
+  year = {2009}
+}
