--- a/bibliografia.bib
+++ b/bibliografia.bib
@@ -284,3 +284,12 @@ year = {2025}
   author = {Giorgino,  Toni},
   year = {2009}
 }
+
+@book{Rabiner1993,
+author = {Rabiner, Lawrence and Juang, Biing-Hwang},
+title = {Fundamentals of speech recognition},
+year = {1993},
+isbn = {0130151572},
+publisher = {Prentice-Hall, Inc.},
+address = {USA}
+}
