--- a/bibliografia.bib
+++ b/bibliografia.bib
@@ -293,3 +293,30 @@ isbn = {0130151572},
 publisher = {Prentice-Hall, Inc.},
 address = {USA}
 }
+
+@inbook{Hastie2009Logistic,
+  author    = {Trevor Hastie and Robert Tibshirani and Jerome Friedman},
+  title     = {The Elements of Statistical Learning: Data Mining, Inference, and Prediction},
+  edition   = {2nd},
+  publisher = {Springer},
+  year      = {2009},
+  chapter   = {4.4},
+  pages     = {119--124},
+  series    = {Springer Series in Statistics},
+  doi       = {10.1007/978-0-387-84858-7},
+  url       = {https://hastie.su.domains/ElemStatLearn/}
+}
+
+
+@inbook{James2021Logistic,
+  author    = {Gareth James and Daniela Witten and Trevor Hastie and Robert Tibshirani},
+  title     = {An Introduction to Statistical Learning: with Applications in R},
+  edition   = {2nd},
+  publisher = {Springer},
+  year      = {2021},
+  chapter   = {4.3.1},
+  pages     = {129--132},
+  series    = {Springer Texts in Statistics},
+  doi       = {10.1007/978-1-0716-1418-1_4},
+  url       = {https://www.statlearning.com/}
+}
