--- a/bibliografia.bib
+++ b/bibliografia.bib
@@ -320,3 +320,17 @@ address = {USA}
   doi       = {10.1007/978-1-0716-1418-1_4},
   url       = {https://www.statlearning.com/}
 }
+
+
+@inbook{James2021RandomForest,
+  author    = {Gareth James and Daniela Witten and Trevor Hastie and Robert Tibshirani},
+  title     = {An Introduction to Statistical Learning: with Applications in R},
+  edition   = {2nd},
+  publisher = {Springer},
+  year      = {2021},
+  chapter   = {8.2},
+  pages     = {316--321},
+  series    = {Springer Texts in Statistics},
+  doi       = {10.1007/978-1-0716-1418-1_4},
+  url       = {https://www.statlearning.com/}
+}
