Add intro to comparison protocol

--- a/bibliografia.bib
+++ b/bibliografia.bib
@@ -334,3 +334,15 @@ address = {USA}
   doi       = {10.1007/978-1-0716-1418-1_4},
   url       = {https://www.statlearning.com/}
 }
+
+
+@article{Sun2014,
+  author={Sun, Xu and Xu, Weichao},
+  journal={IEEE Signal Processing Letters}, 
+  title={Fast Implementation of DeLong’s Algorithm for Comparing the Areas Under Correlated Receiver Operating Characteristic Curves}, 
+  year={2014},
+  volume={21},
+  number={11},
+  pages={1389-1393},
+  keywords={Signal processing algorithms;Time complexity;Vectors;Receivers;Manganese;Sun;Monte Carlo methods;Area under the curve (AUC);DeLong’s method;mid-rank;receiver operating characteristic (ROC)},
+  doi={10.1109/LSP.2014.2337313}}
