--- a/bibliografia.bib
+++ b/bibliografia.bib
@@ -346,3 +346,29 @@ address = {USA}
   pages={1389-1393},
   keywords={Signal processing algorithms;Time complexity;Vectors;Receivers;Manganese;Sun;Monte Carlo methods;Area under the curve (AUC);DeLong’s method;mid-rank;receiver operating characteristic (ROC)},
   doi={10.1109/LSP.2014.2337313}}
+
+
+@techreport{chang2011guide,
+  title        = {A Practical Guide to Support Vector Classification},
+  author       = {Chang, Chih-Chung and Lin, Chih-Jen},
+  year         = {2011},
+  institution  = {Department of Computer Science, National Taiwan University},
+  url          = {https://www.csie.ntu.edu.tw/~cjlin/papers/guide/guide.pdf},
+  note         = {Accessed 2025-08-27}
+}
+
+
+@article{Cortes1995,
+  title = {Support-vector networks},
+  volume = {20},
+  ISSN = {1573-0565},
+  url = {http://dx.doi.org/10.1007/BF00994018},
+  DOI = {10.1007/bf00994018},
+  number = {3},
+  journal = {Machine Learning},
+  publisher = {Springer Science and Business Media LLC},
+  author = {Cortes,  Corinna and Vapnik,  Vladimir},
+  year = {1995},
+  month = sep,
+  pages = {273–297}
+}
