--- a/bibliografia.bib
+++ b/bibliografia.bib
@@ -372,3 +372,29 @@ address = {USA}
   month = sep,
   pages = {273–297}
 }
+
+@article{Breiman2001,
+  title = {Random Forests},
+  volume = {45},
+  ISSN = {1573-0565},
+  url = {http://dx.doi.org/10.1023/A:1010933404324},
+  DOI = {10.1023/a:1010933404324},
+  number = {1},
+  journal = {Machine Learning},
+  publisher = {Springer Science and Business Media LLC},
+  author = {Breiman,  Leo},
+  year = {2001},
+  month = oct,
+  pages = {5–32}
+}
+
+@inproceedings{Chen2016XGBoost,
+  author    = {Tianqi Chen and Carlos Guestrin},
+  title     = {XGBoost: A Scalable Tree Boosting System},
+  booktitle = {Proceedings of the 22nd ACM SIGKDD International Conference on Knowledge Discovery and Data Mining},
+  year      = {2016},
+  pages     = {785--794},
+  doi       = {10.1145/2939672.2939785},
+  url       = {https://doi.org/10.1145/2939672.2939785}
+}
+
