--- a/bibliografia.bib
+++ b/bibliografia.bib
@@ -398,3 +398,14 @@ address = {USA}
   url       = {https://doi.org/10.1145/2939672.2939785}
 }
 
+@article{Li2018Hyperband,
+  author  = {Lisha Li and Kevin Jamieson and Giulia DeSalvo and Afshin Rostamizadeh and Ameet Talwalkar},
+  title   = {Hyperband: A Novel Bandit-Based Approach to Hyperparameter Optimization},
+  journal = {Journal of Machine Learning Research},
+  year    = {2018},
+  volume  = {18},
+  number  = {185},
+  pages   = {1--52},
+  url     = {http://jmlr.org/papers/v18/16-558.html}
+}
+
