Updates from Overleaf

--- a/Master_Document.tex
+++ b/Master_Document.tex
@@ -7,6 +7,9 @@
 \usepackage{algorithm}
 \usepackage{algpseudocode}
 
+% For tables
+\usepackage{booktabs}
+
 % \usepackage{hyphenat}
 % \hyphenation{apren-di-zaje pro-fun-do}
 
@@ -126,7 +129,7 @@
 
 % Apéndices
 \appendix
-\include{apendix_1}
-\include{apendice_ejemplo}
+\include{appendix_1_dataset_summary}
+% \include{apendice_ejemplo}
 
 \end{document}
