Remove uncompatible character

--- a/appendix_1_dataset_summary.tex
+++ b/appendix_1_dataset_summary.tex
@@ -99,8 +99,8 @@ In this appendix we list the variables set discussed in the rest of the document
     \texttt{hip\_rot\_peak\_angle\_right} & Peak hip axial rotation (internal/external) for the right limb (transverse plane). & $^\circ$ \\
     \texttt{hip\_rot\_excursion\_left} & Hip axial rotation range of motion for the left limb (transverse plane). & $^\circ$ \\
     \texttt{hip\_rot\_excursion\_right} & Hip axial rotation range of motion for the right limb (transverse plane). & $^\circ$ \\
-    \texttt{foot\_prog\_angle\_left} & Mean foot progression angle relative to lab (toe-out +, toe-in −), left. & $^\circ$ \\
-    \texttt{foot\_prog\_angle\_right} & Mean foot progression angle relative to lab (toe-out +, toe-in −), right. & $^\circ$ \\
+    \texttt{foot\_prog\_angle\_left} & Mean foot progression angle relative to lab (toe-out +, toe-in -), left. & $^\circ$ \\
+    \texttt{foot\_prog\_angle\_right} & Mean foot progression angle relative to lab (toe-out +, toe-in -), right. & $^\circ$ \\
     \texttt{foot\_ang\_at\_hs\_left} & Foot pitch angle at heel strike (sagittal), left. & $^\circ$ \\
     \texttt{foot\_ang\_at\_hs\_right} & Foot pitch angle at heel strike (sagittal), right. & $^\circ$ \\
     \texttt{mhw\_exc\_from\_to\_left} & Medial heel whip excursion from toe-off to peak whip, left (transverse). & $^\circ$ \\
