Allow line breaks after underscores within this table

--- a/appendix_1_dataset_summary.tex
+++ b/appendix_1_dataset_summary.tex
@@ -36,6 +36,8 @@ In this appendix we list the variables set discussed in the rest of the document
 
 {\small
 \setlength{\tabcolsep}{3pt}
+% Allow line breaks after underscores within this table
+\renewcommand{\_}{\textunderscore\allowbreak}
 \begin{longtable}{@{}p{0.30\textwidth} p{0.60\textwidth} p{0.10\textwidth}@{}}
     \caption{Baseline feature dictionary}\label{tab:baseline_features}\\
     \toprule
@@ -143,6 +145,8 @@ In this appendix we list the variables set discussed in the rest of the document
 
 {\small
 \setlength{\tabcolsep}{3pt}
+% Allow line breaks after underscores within this table
+\renewcommand{\_}{\textunderscore\allowbreak}
 \begin{longtable}{@{}p{0.30\textwidth} p{0.60\textwidth} p{0.10\textwidth}@{}}
     \caption{Dominant leg derived feature dictionary}\label{tab:domleg_features}\\
     \toprule
@@ -248,6 +252,8 @@ In this appendix we list the variables set discussed in the rest of the document
 
 {\small
 \setlength{\tabcolsep}{3pt}
+% Allow line breaks after underscores within this table
+\renewcommand{\_}{\textunderscore\allowbreak}
 \begin{longtable}{@{}p{0.30\textwidth} p{0.60\textwidth} p{0.10\textwidth}@{}}
     \caption{Top 40 selected feature dictionary}\label{tab:top40_features}\\
     \toprule
