--- a/bibliografia.bib
+++ b/bibliografia.bib
@@ -409,3 +409,47 @@ address = {USA}
   url     = {http://jmlr.org/papers/v18/16-558.html}
 }
 
+@article{Fisher2018,
+  doi = {10.48550/ARXIV.1801.01489},
+  url = {https://arxiv.org/abs/1801.01489},
+  author = {Fisher,  Aaron and Rudin,  Cynthia and Dominici,  Francesca},
+  keywords = {Methodology (stat.ME),  FOS: Computer and information sciences,  FOS: Computer and information sciences},
+  title = {All Models are Wrong,  but Many are Useful: Learning a Variable's Importance by Studying an Entire Class of Prediction Models Simultaneously},
+  publisher = {arXiv},
+  year = {2018},
+  copyright = {arXiv.org perpetual,  non-exclusive license}
+}
+
+@misc{Simonyan2013,
+  doi = {10.48550/ARXIV.1312.6034},
+  url = {https://arxiv.org/abs/1312.6034},
+  author = {Simonyan,  Karen and Vedaldi,  Andrea and Zisserman,  Andrew},
+  keywords = {Computer Vision and Pattern Recognition (cs.CV),  FOS: Computer and information sciences,  FOS: Computer and information sciences},
+  title = {Deep Inside Convolutional Networks: Visualising Image Classification Models and Saliency Maps},
+  publisher = {arXiv},
+  year = {2013},
+  copyright = {arXiv.org perpetual,  non-exclusive license}
+}
+
+@book{molnar2025,
+  title={Interpretable Machine Learning},
+  subtitle={A Guide for Making Black Box Models Explainable},
+  author={Christoph Molnar},
+  year={2025},
+  edition={3},
+  isbn={978-3-911578-03-5},
+  url={https://christophm.github.io/interpretable-ml-book}
+}
+
+
+@INPROCEEDINGS{Selvaraju2017,
+  author={Selvaraju, Ramprasaath R. and Cogswell, Michael and Das, Abhishek and Vedantam, Ramakrishna and Parikh, Devi and Batra, Dhruv},
+  booktitle={2017 IEEE International Conference on Computer Vision (ICCV)}, 
+  title={Grad-CAM: Visual Explanations from Deep Networks via Gradient-Based Localization}, 
+  year={2017},
+  volume={},
+  number={},
+  pages={618-626},
+  keywords={Visualization;Cats;Dogs;Computer architecture;Knowledge discovery},
+  doi={10.1109/ICCV.2017.74}
+}
